# calculate_joint_angles

./: README.md  main.py  pyproject.toml
calculations/: calculate_joint_angles.py
visualize_data/: skeleton_data_viewer.html  skeleton_data_viewer.py
